Fix table row alignment
Aligns content in table rows with expand  and action buttons

--- a/src/assets/styles/bmc/custom/_tables.scss
+++ b/src/assets/styles/bmc/custom/_tables.scss
@@ -11,6 +11,7 @@
     &:last-of-type {
       border-right: 1px solid gray("300");
     }
+    vertical-align: middle;
 
     // Table action buttons
     .btn-link {
